[gd_scene load_steps=5 format=4 uid="uid://c6mv77a24lh54"]

[ext_resource type="Script" path="res://Scripts/ball.gd" id="1_lob2q"]
[ext_resource type="AudioStream" uid="uid://2hvts8xp1if0" path="res://Sound/Clang 1.wav" id="2_eckao"]

[sub_resource type="CircleShape2D" id="CircleShape2D_e02uu"]
radius = 64.4981

[sub_resource type="AudioStreamWAV" id="AudioStreamWAV_qe56u"]
data = PackedByteArray("TABJADUAp/+5//z/KAB+ABgAtv+7/53//f8xAAEAJwANACAASwDU/9L/CADg//P/7v8JACMA5f87AGQA/f8DAMj/kf/5/ycAKwAAAPP/VQAwAAAA9f+S//D/UgAKACgACwDh/ykA9v/I/7v/kP9qAOEBCwPcBCcI8gl/BsYApvwF/FkBgANq+un0BP0NCbkQXwzJ+QnqW+1u/r8KgQag9ivqUPCwB+8YLxaKCNn4c+4r82YAYASn/sH7D/0+/2sEMAigBlsFJwME/Rj5//jM/HYFcwnEBXsD7AHJ/ab6KPnj+sIASARIA3EBaf89/pkAvwZ6CmcC2/NE72f1OPyPAWAE1QLwAKb/GPx8+nX/TwdSDKgJf/5B9Kv0gf5dCU8MRwW1+iD0pvfDA9wLDQnVAET6IfrN/oECLgV5BtMDv//p+uT0nPPT+Gb/AAW8CIAJUAeKAfn6jvkx/cL/If2o9nDy1ParA50RoBeLEOb/e/Hc7tv2yQD2BEkC5P3Z/YgDPQkTCa4E1f9l+5H4xPfH94L5yP3jAt8GfwdVAxT95vmg/LMCpAZLBe/+/PaL8+X32ADKCIoLOQfg/ub5b/zMAiMG0wJJ+631HvZt/JwEagmnCTkH/AK7/hH8L/pH+p/91gBCAZ3/JP15/Mf/1wSeB98FtADL+4f5M/rb/WgC6wN8AYn9Tvuj/RYETwrHC6kG1v0597/1n/jO/Z4B+QGvALj/jAAOBIsHpgcbBOb9PPcv9N32k/2fBHoI4AdGBOf/p/z++5P9Gv/0/ln9cvvV+sL8ZAH+BiIKowgTAzD8LPhk+Q7+bQLvAgb/EPsd+xP/7gQdCR4IhwIj/JL4RvlD/LH+ov9j/0j/zAA7A8gE8wTrA9ABEP8t/FD6pPqy/H7/swInBSMFowKp/8f+kQCcAm8Cs/+j+xb5zfrh/z4EBgXrApkAxv9uAKsBtwF4/2f8e/oh+n/7df62AQwE6wRZBEkDBwLo/4v9YPxn/Oj8iP1T/uT/TQLMBIAGJgYUA/r+7Put+qL7N/5SAG0AFv+W/p4ApQPPBGMDVQAO/fb6x/pv/NX+PABvAHQAjQDmAMQBcwJMAkIBeP+c/UL8t/v8/P7/rwLYA7gDmAIfAQ4AuP8pAGQAOP9E/Qz8nvxv/y8DUwWeBMcBxf6F/Ub+7v8WAWQAD/43/IP8tv4xAWcCSwJ+AUEAmP9KABkBwQDE/9z+Rf4p/r3+NgAzArUDFgQXA9kAaf77/CP9mv7U/4v/pv6M/oL/kwH3A28EAAJc/tT7c/v7/GX/NQFPASIAO/+i/1UBLwM/Aw4BZP7o/Of8Dv5u/xUAVADZAFYBagFzAYgBJgFaAJ3/y/7D/U39//2D/1gBvAKHAtEALv+y/lP/XACDACz/lP0u/RT+6f8cAj0DXAJkAOr+kv47/00AvADh/43+I/71/k4AagHjAd0BoQElAXwA+/+A/8j+JP4U/oP+B/+P/zsA7QCTATMCMALrAAH/qP1i/QD+E/8AAGIAagCmAF0BEAINAjIB2P9s/nD9bf2P/icAHwFGAUoBXwEqAa8AMQCs/xr/u/6Z/m/+af4Q/z4ARQHFAZEBrQCY/9z+z/6J/1IACgDh/h3+cP6w/1YBgQJUAusAXP+P/p7+Rv8SAEUAuf8g/xv/2P8aAQQC6QEZAQsA8v5O/pv+d/8NAB4A8P+j/2v/3v/8AOIB4AHmAEb/7/3D/aD+0v+5AM0AIQCd//X/BQEgAocCnwGA/3/9Cv0a/rv/FwGNARkBjwB3AJIAowCIAO//1f7h/bv9eP6o/8UAigHlAa4BwwCP/+L++P5X/5H/fv8k//b+g/+3ANQBMwK2AYcAFv8x/lz+NP/7/z0A/f+k/7L/RQAfAa4BTAERAPD+hP6g/gP/hP/W/9b/2P8LAGAAxwAaAfoAWwCl/xv/y/7R/ir/sP9DAJ8AlgB6AJ8A0ADKAI8AIwCO//X+pv7Z/nH/KADHAAYB0QCEAGIATAAgAMf/Tf8B///+G/9c/+n/pAAtAUEBDgG+ADYAiP8B/7T+pP7u/nT/BwCbABkBfQG2AXcBmwB6/5P+Of58/iv/7v9eAHIAjADdACYBJQG2ANj/2v4u/hn+k/5n/0sA4ADTAGYAMABbAJoAogBNAKD/4P52/rD+e/9fAOcA+wDRAJwAkwDMAOsAgwCl/73+Lf45/t3+z/+5AEoBWAEMAaQASgAOAM7/Vv/G/m3+eP74/vD/IQHsAdwBJwFdANv/oP+G/3X/TP/+/uf+Xv8lAPQAvwErAskBywC7/xH/+v5A/4f/qP+Z/2//kP9iAIkBDQKWAYwAUv9r/m7+D/+F/6n/sv/R/y0AtQAdAToB/wBgAIT/2v7E/hT/c//w/2wAjQBvAGcAaQB2AJQAfAACAFj/xv6O/tP+jP9xAAcBGwHdAGoA+//r/wYAwf84/8v+iv6m/l//cwBQAaYBaAG2AAcAw//H/63/X/8I/9v+Kv/8/8oAMAE3AeoAbAAVANr/hf9J/1v/kv+4/8b/4f81AK0AFAFFAREBaAB9/6v+Z/7X/o//FwBYAE4AMgBrAPEARwEHAT8AUf+r/oj+8/6n/0MArQDsAAIB/QDMAGIAAgC//2X//f66/sP+Qf8VAN8AQwEYAZcAIQDW/7L/sv+g/13/Df/3/mr/TAALAU8BHwGJANf/a/9i/4v/of+R/3b/av+M/wEArwBAAXIBBwEeAFL/B/8x/6f/HAA8AAEAyf/l/0AAkQC9AKkAKwB9/w7/Ev9//xAAaAB+AIUAegBZAFMAaQBuAEYA+f+f/1//YP+u/x0AZQByAGYAUABHAGYAkQCCABAAYP/b/t/+Xf/5/3EArQCvAI0AdABvAFcAEQDJ/4X/Pf8d/0X/n/8dAJIAwAC7AJwAQwDR/6T/yv/3//f/3f/Q/97/HAB/AKwAgABDABMA0P+F/2L/g//J//X/+P/6/xUATgCJAJsAcAAbAL//gf9q/2//qv8PAEkANAAaACMAMQA0AEIARAAWAMz/nf+q//H/RQBiAEwAKwAMAAkANABZAEQAGgD//+T/0v/p/yMAUQBYACkA1v+p/9D/FwA8ADYABACt/3P/lP/1/1EAjwCkAHIACgC2/5H/iv+p/+3/FwAMAPz/IgB+AM0A0QB8AP7/g/89/1//2/9MAG8AXwBFACQADgAZAC4AGwDl/77/zP8AADEANQD//7P/jf+w/xEAdgChAIYAPgDl/5v/hv+j/8v/9P8rAFoAWAA7ADsATAA0AOL/ef9B/3P/9f98ANYA6ACgAB4AtP+T/6D/sP/K/+z/AgAWADsAXgBnAFcAOgAVAPf/7//x/+3/5//c/8T/pv+f/8j/JwCgAPAA3ABwAPf/r/+c/5H/af9C/1//0P9nAOYADQHEADMAq/9c/0n/Xv93/43/xf8sAIkAmgBoACUA6P+9/7H/v//Y/+n/5//c/+//LgBoAGoARAAfAAkABQAEAOb/qf94/23/kf/k/0gAhwCWAJMAegArALb/Vf8t/0X/k//y/zoAdgCvAMsApwBLAOL/kv97/5v/0f8FADEAVwBtAGAANQAHAPz/DwAlACIA/f/E/6n/zf8LACoAKAAiAB0AFAAYACQACgC9/23/U/9//+L/TwCXAKcAmQCBAFoAFAC8/2X/KP8a/1X/1/9uANEA7ADfALQAXADh/3b/Q/9T/5X/1P/k/9r/8f82AHoAjABdAAgAsv99/4D/rf/U/+H/5v/x/woAQwCNAKcAcwAiAN7/pP+C/5b/yv/t/wEAKQBcAHkAdwBnAEUAAACg/13/Yf+g//f/UQCWAJkAYAAhAAQA+P/i/8L/of+N/5v/0v8RADQAOAArABkAFQAlADQANAAzACIA8//G/8T/5/8XAEEATgBBADUAOAA8ADcAFgDP/4L/ZP96/7H/AABMAG0AZABNACoAAQDp/+D/3f/j//T/AwANABYAGQAPAPr/5f/c//H/GgBBAEgAIADe/7H/tP/S/+7//v8IABUAKAA9AEwAQwAOALj/cP9p/6z/GABoAHAARwAPANn/sv+t/7X/s/+7/+f/NACJALkAnQBQAAMAw/+O/4b/uv8MAFAAYAA/AB0AGAAVAAgACwAZAAsA6v/T/8v/xv/D/8H/w//S/+f/CwBSAJsApQBRAMn/VP81/3X/4f9BAIgAowCHAFIAKAAKAOD/pv95/3n/qv/2/1AAnQCvAHwAIAC8/3j/gv/I/wYAJwA7ADgAFgDn/8n/2f8TAEQARwA3ACwAGwAAAOH/sP9+/37/tv8AAFkAuQDnALwAWADc/2f/KP8v/2j/wf8tAIcArwChAGcAFgDO/5L/Wf8y/0T/m/8UAHgAoACGADUA2/+p/6j/w//2/zIASwA6ACUAFQAJAAgABgDr/9D/zP/L/97/LACHAIkAOgDm/6z/m//F/wYAKQAgAPn/vf+T/57/4f85AF4AJwDU/73/4P8BABEAEwD+/9X/yP/u/yQAPQAxAA4A1/+R/2L/Zv+X/+r/UACSAHwAKQDc/7f/rv+q/6r/yf8PAFcAggCMAGYAGgDZ/6r/bv9E/3D/3P84AGwAegBWAAgAt/97/27/lv/S/wEAMABmAH4AZgAvAPf/w/+N/2H/Xv+V//L/QgBiAEYACQDV/7X/rP/H/wcASwBkAEMA9f+x/6r/2v8ZAEoAUwA7AC0AMwAkAPP/w/+j/4X/fP+s/w0AegC5AKEASgDz/7b/l/+b/7z/6v8VAC4ALAAcAA8A+//P/6f/q//V//j/+v/v//T/CQAQAPr/3P/i/xEARwBWADsAEgDu/8r/pP+A/3b/nv/r/zgAbgCCAGMAFAC4/3X/X/97/8j/MgCLAKUAgQBPACYA+//S/7f/pf+d/7v/AAA1ADYAGQAAAO3/zv+Z/3P/kf/t/z0AWQBLACYA+f/Z/8z/u/+u/77/4/8AABAAEwD9/97/4f/6////7v/f/9f/1v/j//L/6//T/77/tv/I//7/PABfAFUAIwDi/7P/ov+i/7H/0f/z/wkAGQAiACEAIwAsACIA9f++/6P/sv/m/xgAKQAZAAMA7f/S/7r/sf/E//L/FwAWAP//+/8WACkAIQAJAPT/4v/e/+L/3v/R/8n/wP+1/8T//v9BAGUAWwA1ABQABQD1/9b/xP/D/7//0P8VAGsAkwCEAFYAHQDt/8L/oP+l/9f/DQAyAEgAPgAWAP7/+//p/8b/uP/B/8//5f8FACUAPABBADUAKgArACgAGAAEAOr/yP+s/6L/nf+a/7L/8/9PAJ0AwwCrAFkA9/+u/3z/TP83/1r/sP8YAG0AiwBsACwA5P+r/5z/o/+i/6j/yv/o//j/IQBZAFwAHgDW/6j/ov/J//n/GQA0AEgAPQAeAAoA+v/s/+T/zP+Z/3L/ff+X/7P/6f84AHEAfABlADwABQDR/7v/yP/K/6r/i/+l//v/ZgCxAKwAXAD3/7D/mv+l/6z/nv+S/6v/6v80AGwAdABeAFAARQAkAAAA6v/Z/8j/w//O/93/5//x/wQAHQAYAPb/0/+1/5X/m//Q/wAABgAFABIAMgBsAJ0AjwBAAN7/jv9z/5b/zP/0/xUANABVAHsAjQBhAAsAtv91/1v/c/+i/9b/FQBYAIAAgwBmADQA///I/5T/g/+c/7L/sv/H/wIATQCMAKkAlwBlACAA1/+i/43/g/9//6T/+P9hALwA3gC5AHYANgDu/5z/W/84/z7/gP/y/20A0ADwALcARwDe/6H/lP+e/57/mv+z//X/RAB9AIgAZQAwAAoA9f/l/8//uv+9/+H/CwAcACIAMQBJAFsAYABKAAkAr/9m/1r/kP/m/zIAYQBwAGoAYgBeADcA2f9r/yv/NP+E/wAAawCdAJ8AhABdADEA9/+l/13/Uf+E/9X/GwA/AE8AbACGAHAALADj/67/kf+R/6j/yP/m/wQAJQBEAFkAZQBvAFcA/P95/yH/G/9S/6H/7/89AI8AzQDlANMAjAAKAH3/Hf8A/x7/bf/Z/1QAzQAVAfsAiADv/2r/Iv8N/xH/Rf+z/yQAagCVALUAuwCiAGQAAQCg/3L/cv+C/5j/sv/V/wsAVACYAMEAvAB5ABMAtf9x/0H/L/9M/5b/9P9LAJUAzADeALYATQC3/yj/4v70/j3/pv8aAHUApQCuAJIAWwAgAOT/oP9p/1X/bv+3/yQAiAC2AKwAiwBvAFoAJgDH/2j/Pv9I/2X/j//O/yAAdQC/AOAAsQAxAJ7/Nv8O/xv/S/+Q/+r/UgCuAOQA5gCrADYAqf8s/9v+0f4g/6//TgDMAAIB7wC1AGsADgCu/2b/QP82/0b/dP/H/z4AuQAEAfUAjQABAJD/Wv9U/1X/TP9M/3v/4/9lAN4AJQEVAacAAABg//7+7f4U/1j/tv8jAJAA8AAuASoB1wBHAJn//f60/tX+RP/L/0IAngDaAO4AzwCTAFIABwCi/zn/AP8g/4//GgCQANkA4wCwAGkANgAVAOz/rP9a/xf/Ef9k////qQAjAUEBBQGKAAAAlv9b/zX/GP8a/1X/z/9wAAQBUwE5AcgAMACc/yD/3/78/lz/wP8OAFUAlQDGAOcA5QCjACgAov9E/zD/U/+L/8j/CAA/AG4AnwDCALkAgwAtAMH/V/8b/yf/bv/R/zIAeACRAIwAfgBiACcA2f+V/2v/Y/97/7b/FQCEAMgAvwCFAEMABADV/7j/nf+H/4v/qP/U/x4AgwDdAAsB/ACqACwAs/9X/yb/Mf90/83/KACLAOEACQH0AKoANACu/zj/7/7k/i//xv9sAOYAIAEYAdUAcwAVALz/af8w/yL/Tv+7/z0AmQDEAMYAlwBDAAAA1v+n/3z/aP9x/6r/DwBoAIkAhwCAAG0ARAAHAL3/ev9l/4b/w//8/x4AMABQAJAAwQCoAEgA2P98/0//W/+N/8P/AABSAJ0AywDYALMARwC8/0j/Cf8W/2b/xf8OAFIAkgCvAKYAgwBCAPD/rP97/1v/Yv+U/9n/JgB1AKkApQB3AEAAGQAGAPD/tP9k/0L/a//B/ycAjwDYAOUAwAB5AA8AnP9I/yD/G/9C/5P/9v9bAK0AxwCmAGIA//+M/0b/RP9y/8T/LAB8AJ0ApQCkAIkASwD8/7T/jP+O/57/qv/E//z/RQCKALgAuQCHADwA9P+1/4j/cf9l/2X/k//2/10AogDJANQArwBZAOv/if9N/zb/Of9n/9P/VwC6AOIA0wCbAFcAHQDg/57/eP9+/57/zv8PAFEAdwCAAHEASQAAAKT/Yv9a/4f/xP/6/yoAXgCJAJcAewA/AP3/zv+2/57/hf+D/63/+/9bAKMAqAB0ADUACwDs/8z/pf92/1r/df/M/zwAkgCmAIEARAAKANv/uf+b/3v/av+A/7r/+f8iADIALQAXAPf/zv+q/5n/pP+//9z/+v8bADAAMwA7AFYAdAB5AF4AKgDt/6n/b/9c/4P/0v8gAFcAcwB8AHUAVwAdANP/jf9X/z//Uf+U//T/VACYAK0AlQBaAAsAuv94/1z/dP+z//n/LQBPAGAAWwA+ABEA7P/a/9X/z//R/+//JQBZAHEAZwBJACkABgDg/8L/tv+7/8r/3v/2/w4AJAA4AFIAdgCHAGgAHQDM/5L/fP+N/8L/AAAoADYARABaAGQATgAbANr/nv98/4P/tv8IAGMAnQCZAF8AGADq/9P/zf/Y/+3/7f/T/8r/8f8mAD0ANgAjAAwA6v/J/8H/1P/y/wUABADw/+H/8P8YAEIAYgB2AG4AOQDt/7f/rv+0/7f/xf/r/xAALABAAEcALQD0/7n/lv+Y/7z/7/8WACYALgBCAFwAYgA7APL/pv97/4v/yP8BABYAFgAhADsAVABlAGoAVwAhANf/lv98/5D/tv/f/wYANgBkAH0AfgBrAE4AJgDx/7H/e/9l/37/v/8VAGEAfgBjACEA3P+2/77/2//s/+7/8P/9/xMANQBcAHIAbgBPAB8A8//k//n/FAAXAAkABgAcADkARQBBADoAMQAYAO3/u/+V/5T/w/8OAEwAZgBnAFwASgAxABgAAADu/+j/7v/5/woAHQAnACYAHwAWAAgA/P/w/+3///8kAEYAUgBHACUA+//g/+j/AAAOAAwACQAQAB4AIAAOAPj/7v/p/+H/2v/a/93/5f/2/woAFgAaABUAAQDv/+3/+f8LABkAGAD+/9r/yv/h/xQASABYAD0ACwDZ/7T/pf+t/8D/3/8KADcAUgBbAFsASAAZANr/oP99/4H/sv/5/zgAWgBaADkACQDb/7r/q/+t/7v/2P8AACUAPQBJAEYAKQD//+L/5P/4/wwAEAD0/73/mP+a/7X/0v/y/xMAMQBAADkAHQDx/7//nP+c/8T/AAA2AFMAWABNAD8AJwD7/8T/o/+p/8P/3f/w////EAAoADMAHgDq/7H/l/+s/+X/FgAeAAAA1v/D/9v/FgBVAHEAXAAcAMj/gv9n/33/tP/v/xYAJAAvAD0ANwAVAOr/wf+e/5D/o//U/xIAUwCBAIoAYwAWAL7/g/95/5X/u//d//T/AwAWAB4ADQDp/8L/pP+Z/7L/4/8HAAoA/P/w//X/DAAoAC4AFgDs/8j/wv/d//3/BwD///D/3//X/+T/9f/8//j/8v/j/9D/xv/F/9P/7f8HABIAEAAUABgAEgAAAOj/0f/E/7r/q/+h/7X/5P8XADYAOQAoABcAEQAMAP3/4v/I/8P/4/8YAEAARgA0ABYA9f/h/9//3P/R/8//4f/2//3//f////n/4f+5/5z/n//B//L/IAA7ADYAHQAHAPT/4f/W/93/5P/Z/8b/v//T//r/HgApAA8A7f/f/+j/8//z//L/9f/1//H/9/8JABoADwDr/8L/q/+v/8n/6P8AABAAIAApACIADQDw/9X/wv+7/7n/vP/O//X/JgBLAE0AJwDz/8r/tv+x/7j/0v/4/xMAHgAfABcABQDr/9f/0f/R/8z/yf/X//z/JQAxABgA9//u/wAACAD0/9j/0P/d/+////8RACMAIgAMAPr//f8KAA0AAwD+/wMADQAPAAQA8v/l/+H/4P/f/9z/2f/f//n/HAAzAC8AFQD0/93/3P/m/+j/5v/w/wsAKAAwABoA8v/R/8f/0v/r/wEADAATACQALgAZAPX/3P/V/9v/5v/w//n/EwBAAFcARgAYAOT/rv+H/4j/uP8GAEwAXwA+ABcABAD+//n/6//J/5v/hf+e/+L/NgBzAHgATwAdAPX/1v/M/9r/6v/o/9b/xf/T/w0AVABzAF8AKADl/6v/k/+d/7T/0P/s//v/BQAYADAAQABFAC8A9/+w/4X/h/+y//X/LgA/ACUAAQDv//n/FAAfAAIA0f+0/8b///88AFwAUAAuAAwA9v/x//z////w/9r/z//U/+j/CAAqAEAAOgAYAOv/y//E/9H/5f/u/9n/s/+m/8b/CQBRAHMAVgAGALb/kv+l/9P/9v8AAP7/AAAPACQAMwAxABkA+v/T/6//mv+o/9n/HwBaAG0AUQAcAN7/q/+Z/6b/u//B/7//wP/W/wwATwBwAFoAHQDY/6n/p//K//H/BQAGAP3/+f8KACMALQAXAOj/q/+C/4z/vv/7/yoAQABGAEkATABAABwA6/+0/4r/h/+v/+j/FQA2AEwATgA7ABcA7v/S/9L/4P/s/+z/3//M/8v/5/8UAEAAVgBNADAAHAAbABcAAADd/7r/n/+m/9j/HABPAFwARgAVANn/of99/3v/ov/j/xwAPQBMAF4AdAByAEIA8/+o/4D/i//A/wYAQQBcAFsAUABKAEQALAD4/73/lf+D/4f/qf/v/z8AfgCdAJ4AfQBCAP3/u/+H/2//ev+g/83/BABTAKoA1QCyAEoAzP9m/0D/Wf+R/8P/6f8XAFUAggCHAGwAPwADAMH/jP9t/27/mv/s/z8AbgB0AGUATgAtAAMA0f+c/3T/Yf9p/5P/2/82AJMA1QDhALAAXwAGALD/Xf8i/yH/Zv/d/1cAsQDgAOwA1QCTACAAkv8b//b+Iv91/8r/FABYAJIAswCjAFoA//+8/5//nP+m/77/4/8UAEUAZgBuAGoAZABcAEAABQC4/3z/cv+Z/9v/JwBvAKYAugCoAHYAMQDf/4X/N/8W/z7/rv9DAMQA/wDvAK0AVADy/4z/Ov8X/zD/fv/o/0oAkwC5AMMAuQCTAEIA1f92/1H/af+Z/8X/7v8jAGcAoQC2AKEAeQBJABEA0f+U/2v/Yf+A/8v/LwCJALcArwB8ACcAyP95/1H/U/9v/6H/6v9CAI4ArACUAFkAEQDH/4n/bf9//7T/+v89AHEAhwB8AFsAOQAhAAkA5P+x/4v/iv+r/9n/AwAnAEcAXwBkAFUAOQAdAAMA5f+8/5n/jf+j/9r/JgB0AKAAkwBYAA8A0v+o/5H/jv+k/83//v8xAGMAjACcAH4AOADn/6f/ff9k/2D/fv++/xAAYgClANAAzACQACsAwP9q/zn/Nf9c/6H/7v85AH8AuQDVALgAWwDe/3X/R/9O/3v/wf8YAHAAsgDMALYAcgAWALz/fv9d/07/Uv+A/+f/agDbAAoB5QCBABEAwP+T/3v/dP97/5H/w/8RAGsArwDDAKMAWAD4/6b/gf+Q/77/6v8GABsALwBFAGIAdwBxAE4AFwDV/5L/bv9//7z/AgA4AFEAVABUAFEARQAnAAAAzP+X/3n/if/C/xMAXgCKAJQAjQB8AF0ANQAFAMn/g/9a/27/u/8dAHIAoQCqAJIAYwAxAAUA1v+l/4v/lf+7//j/RgCSAL0AtgB4AAkAlP9T/1X/f/+7/wAAQwB7AKEArACQAE8A+f+e/1r/Sf95/9//VwCxAMgAowBmADAACQDo/8P/of+Y/7H/1/8AADEAZACKAJAAbAAoAOn/xf+9/77/vv+8/7//1P8HAEkAfwCVAIUAUAAHAMj/ov+a/6z/0f/6/yEATwB/AJgAhwBOAAIAvf+N/33/lf/N/xMAUgB/AIwAcgBDABYA8v/N/6v/mf+e/8D/+/87AGkAdQBlAD4ADQDp/9r/1//M/77/wv/n/yIAWAB0AHMAXQA7ABUA8//S/7L/oP+p/9D/DABKAG4AcwBiAEMADQDI/5L/h/+i/9D/AAAqAEwAXwBZAD0AHAACAOT/wf+t/7f/2f8AABcAGwAYABQADgAGAAQACwAUABsAFQD8/9P/tP+x/8//BgA9AE4ANwAUAPj/4v/X/9j/3f/j/+r/+P8OADMAVABSACMA4/+v/5X/nf/C/+3/EAAtAEQAUABLAC8AAADX/8T/yv/b/+b/5v/p//3/HAA4AEYARAAoAAAA6P/l/+D/0f/F/8L/0P/y/x4ANwAuABAA9f/h/9r/3v/g/93/3//4/yIAQwA4AAwA5v/c/+T/7P/p/+X/6//+/xAAGQAaABgADQD///r/AQALAAkA9//c/8j/xf/R/+X//f8OABEAEQAcACkAJAANAPf/7P/l/93/2P/i//n/EwAnACsAJAAZABkAGgAQAPn/4P/R/9b/8v8UACkAKQAdAA4A/v/6/wgAIQAzADYALAAbAAsA/v/r/9T/w//C/97/EABEAGEAWgAzAAAA3f/N/8T/t/+4/9T/BQA0AE4ASwA+ADMAJQANAPb/6v/r//X/BQAZACkAMAAmAAkA7v/m//T/BQAWABQA/P/j/+D/8/8FABQAIwAzAEEAPwAkAP7/3//a/+7/DwAmACIAEAAIAAoACQABAOv/yP+v/6//x//t/xYANAA5ACsAIQAnADkARAAxAAUA3//P/83/1f/p//7/CQARABoAIQAoACoAGwD5/87/q/+W/5b/vP8CAE8AgQCDAFwAKQAAAOP/1P/J/7P/l/+Y/8f/EABUAHIAXgAmAOz/xP+u/6T/o/+l/7L/1P8HAEEAbgB7AGAAJwDp/7X/k/+R/6n/yv/r/wsAJQAwAC8AJQAWAP7/0v+W/2j/aP+e/+3/MgBYAFoASAAyABwAAQDf/7f/l/+S/7L/5v8bAEoAZQBjAEkAIwD7/9P/sf+Y/47/nP+7/93/AAApAE8AZQBkAEkAGQDq/8T/rP+i/6b/sP+8/9P/+f8oAFcAcwBuAEUABgDG/5j/iv+c/73/5v8TAEAAXwBtAFwAKQDo/7b/nP+S/5r/tf/f/w4APABWAFYAPAAMAM3/lP9y/2v/ev+i/9z/GgBPAGgAXwBHADAAGQD5/9P/sP+V/4//rv/q/ysAXgBrAFAAIwD+/9//xv+5/7X/tf/E/+f/DQApADcAMwAZAPb/1P+8/7X/wv/b/+//AQARABwAJQAwADEAIAAEAOP/wP+q/7D/y//v/w8AHgAZABoAMABJAE4AOQAIAMv/ov+b/6v/yP/v/xEAKAA4AEEANgAZAPr/2f+2/53/m/+1/+v/KABSAF8AWABDAB8A+v/Y/7z/qf+p/7r/2f8GADkAWQBbAEYAHADk/7D/jv+A/4f/pP/Q/wYAQABpAHEAWgAyAAMA0/+u/5r/mf+0/+j/GAAzAEAARwBEADIAEwDu/9H/w//D/87/6/8QAC4APgBFAEQAOgAmAAgA4f+5/6H/nP+v/9b/AgAkADoASgBOADwAEwDd/6j/if+I/57/xP/1/yQASABYAE0AIwDy/9L/y//S/9z/4f/j/+7/AAARABYAEAAGAPv/6//X/8r/zP/a/+T/4v/h/+v/+P8CABEAIgAsACMACQDs/9j/0P/L/9D/6v8QACsAKgAPAPT/6P/n/+L/1//U/9v/5P/r//f/AgAFAPv/6v/l//H/BQAPAAUA9P/j/9v/3P/k/+3/+f8EAA0AFwAmADIALQAXAPz/4v/R/87/2P/q/wEAHAAyADwAMQASAPP/4v/e/9//6/8AABIAFwAPAP//7f/i/+T/7f/5//7/9//n/9//6/8GACMAKwAYAPj/4P/U/87/0v/l//r/BgALAA0AEQAaACIAHQAPAP//9P/o/93/2P/e//T/EgAoAC8ALQAgAAQA5v/R/8v/zP/a//D/BgAVABkAEQAFAAMABQAEAPr/7f/q//3/IQA/AEEAKQAAANH/tv+9/9z//v8WACMAJwAqAC0AKAATAPb/2v/K/9L/7f8NACcAMAAnABEABAAFAAkACQAGAAAA9//v/+7/9P8AAAsAEgAMAAUA///5//n/AQAKAAoAAADx/+v/+f8SAB4AEwD8/9//yP+//87/7f8KABkAFwARABEAFQAPAAAA9//2//v/+//z/+X/1//R/9P/3P/o//H/9P/1//z/AQAAAPf/4f/K/8L/1P/2/xMAIQAaAAgA9v/p/97/1v/O/8X/vv/C/9b/9v8RAB4AHwAdABkADQDy/9P/wv/D/87/2P/l//r/FwAyAEMASQA7ABYA4f+u/5f/ov/D/+P//P8VADYAUgBWADsADgDa/6z/jv+L/6H/y////zgAawCFAHwAVwAfAN//ov96/3D/hv+3//f/NABhAHMAcQBmAE8AIQDi/6X/hP+E/5v/vf/p/x0AUQBvAGYAQgAYAPX/1/+//7H/tf/Q//r/JwBQAGQAVwAsAPf/x/+l/5b/nf+5/+T/GABJAGsAeQBvAEgADADT/67/pf+u/8L/3v8DACcAPAA+ADgALwAcAAEA5//M/7L/pv+y/9X///8hADoATwBbAFQANAAIAOb/0v/N/9j/7f8FAB8ANABAAEEANAATAOD/rf+T/5v/xP/7/ykAQgBGAD0AMgAjAA8A8v/T/8T/x//b//r/GwA0AD8ANwAiAAUA6//W/8n/xf/K/9P/3//u/wIAHAAzAEAAOQAcAPf/0v+3/7L/wP/b//j/EQAqAEEASgA5AAwA1v+r/5n/pP/C/+7/GwA9AE0ASgA8ACoADgDt/9D/xv/U//H/BwATABYAGQAfAB0ADAD0/97/1P/W/93/4f/e/9z/5f8AACkATABVAD0ADwDe/7r/r/+7/9r/BAAtAEoAVABQAD8AJAABAOD/xP+4/7v/zf/q/w8AMAA/ADMAFgD///v/BgAOAAcA9f/k/97/5v/4/w4AHwAlACAAFAAKAAgABwAAAOv/zv+9/8b/6/8dAEgAWgBQADEADgD3/+z/6v/t//T//v8KABkALAA9AEIAMQAPAOj/zf/I/9T/5v/6/wgAEgAVABUAFgAZAB8AHwATAP//6f/f/+X/9/8GAA4AEwAXABgAFAAGAPL/3v/R/87/2v/w/wsAKAA6ADkAJgAGAOj/0//M/8//2//v/wUAGAAfABsAEgAMAAgAAgD6//H/7f/t/+v/6f/m/+j/6//v//f/BAAZADEAPwA5AB4A+v/d/9H/2f/o//T//P8EABIAIQAlAB8AFAAMAAQA+//0//T/+v8AAAQAAgD5//P/+f8MACUANAAyACEACADv/9z/1//g//P/BgAXACUANQBCAEUANwAZAPj/4P/X/97/7/8FABoAKQA0ADsAOwAxAB4ACQD5/+7/6f/u//z/FQAyAEQAPwAoAA8AAwACAAIAAwACAP7/9v/3/wwALQBDAD8AKgAVAAcA/f/w/+P/3v/n//v/GAA8AGAAfQCGAHQASQARAN7/u/+0/8n/7f8PACsAPABFAEkARgA6ACQABgDq/97/5//+/xUAIAAfABkAGwAsAEIATgBDACQA+//V/7z/t//G/+T/BwAmADsAQgBDAEIAOgAhAPj/z//A/8//9P8hAEoAZABeADkACgDp/97/5P/o/+X/3P/X/97/9f8YADgAQwAyABQA///6//n/7//e/8//zP/b//v/JQBMAGAAVQAzAAQA1f+v/57/pP++/+H/BgApAEcAXABgAE4AJgDy/8T/rv+2/9P/8/8LABoAJQAsACoAHQAFAOj/yP+u/6b/vv/z/y4AWABjAFoASgA1ABgA8//G/57/hv+N/7j/AABOAIgAmwCHAFUAFADU/6H/iP+K/6P/z/8HAEIAcgCMAIsAbgA4APL/q/+D/4f/sv/n/w8AKQA8AE4AWgBWADoACwDZ/7P/pP+u/8r/8v8dAEYAZwB0AGsATAAcAOX/tP+T/5D/qv/V/wcANgBcAHAAaQBIABsA7//J/67/o/+q/8f/8v8gAEUAVwBQADcAGQD//+j/0f+7/63/sP/G/+r/EwA5AFIAVQA8AA4A3P+1/5//mv+j/73/5v8ZAEsAbABtAE0AEwDT/5v/e/97/5j/yv///ywATQBdAFkAQAAVAOT/uf+l/6r/xP/o/wwAMABJAFEAQgAiAP7/4P/N/8T/u/+4/8L/5P8UAEEAVABLACoAAADe/8r/xv/J/9L/5f8EACsARwBQAEcAMwAVAO3/w/+q/6//zv/0/w0AEwAPAAsAEQAeACcAIQAJAPD/5P/r//j//f/1/+f/3P/c/+n/AgAdACkAGwD6/9b/wf/C/9T/8P8NAB4AHQAPAAAA/f//////9f/o/+L/6P/4/w4AIwArAB4ABADv/+z///8TAB0AFQABAOv/3P/h//X/DQAcAB4AFQAKAAIA/P/0/+r/3//Y/9z/7f8JACUAMQAoAA4A8//d/9b/4P/5/xIAHwAaAAkA+v/w/+r/5v/k/+f/8v8EABkAKwAxACgAEgD9//H/9P8AABAAGwAcABEA///v/+n/7P/y//r/AgALABIAEwAPAAoABAD5/+v/3//h//P/DgAnADQALwAcAAMA7P/d/9j/1P/R/9T/")
format = 1

[node name="Ball" type="RigidBody2D"]
gravity_scale = 0.0
contact_monitor = true
max_contacts_reported = 10
angular_damp = 100.0
script = ExtResource("1_lob2q")
color = Color(0.866684, 0.520102, 0.784461, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_e02uu")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("CircleShape2D_e02uu")

[node name="Sounds" type="Node2D" parent="."]

[node name="Clang 1" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("2_eckao")

[node name="Clang 2" type="AudioStreamPlayer2D" parent="Sounds"]
stream = SubResource("AudioStreamWAV_qe56u")
volume_db = 10.0

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
horizontal_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
